--- a/quickkycmerchantandroid/app/src/main/res/values/styles.xml
+++ b/quickkycmerchantandroid/app/src/main/res/values/styles.xml
@@ -1,11 +1,24 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:textAllCaps">false</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="editTextStyle">@style/MyEditText</item>
+        <item name="android:buttonStyle">@style/myButton</item>
+    </style>
+
+    <style name="MyEditText" parent="Widget.AppCompat.EditText">
+        <!--<item name="android:background">@drawable/rounded_edittext</item>-->
+        <!--<item name="android:padding">10dp</item>-->
+    </style>
+
+    <style name="myButton" parent="Widget.AppCompat.Button">
+        <item name="android:background">@color/header</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
